--- a/main.html
+++ b/main.html
@@ -9,18 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
-<div>	<header>
+	<header>
 		<h1><u>Pushpa - The Rise</u></h1>
-	<nav>
-		<ul>
-			<li>
-				<a href="#actor" id="nav-actor">Casting</a>
-			</li>
-			<li>
-				<a href="#quote" id="nav-quote">Best Dialogues</a>
-			</li>
-		</ul>
-	</nav>
+		<nav>
+			<a href="#actor" id="nav-actor">Casting</a><br>
+			<a href="#quote" id="nav-quote">Best Dialogues</a>
+		</nav>
 	</header>
 	
 	<summary>
@@ -47,9 +41,8 @@ Kannada actor Dhananjaya was reported to play a pivotal role in April 2020.[58] 
 		Release Date - 17th December 2021
 	</aside><br>
 	<footer>
-		Produced by: &lt Naveen Yerneni &gt
+		<h5>Produced by: &lt Naveen Yerneni &gt</h5>
 	</footer>
-</div>
 </body>
 
 </html>
