--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@ Kannada actor Dhananjaya was reported to play a pivotal role in April 2020.[58] 
 	<aside>
 		IMDB Rating - 7.6/10
 		Release Date - 17th December 2021
-	</aside><br>
+	</aside>
 	<footer>
 		<h5>Produced by: &lt Naveen Yerneni &gt</h5>
 	</footer>
