--- a/main.html
+++ b/main.html
@@ -28,13 +28,10 @@ Kannada actor Dhananjaya was reported to play a pivotal role in April 2020.[58] 
 	</section>
 	<section id="quote">
 		<h3>Best Dialogues</h3>
-		<ul>
-			<li>Naon mein baith kar jaal fekna bahot asaan hai … ...
-			</li>
-			<li>Sabki apni ladaai hai.</li>
-			<li>Maal milega toh Pushpa nahi milega, Pushpa mileage toh maal nahi milega.</li>
-			<li>Upar se sochane ka, kamar ke neeche se bilkul nahi.</li>
-		</ul>
+			Naon mein baith kar jaal fekna bahot asaan hai … ...
+			Sabki apni ladaai hai.
+			Maal milega toh Pushpa nahi milega, Pushpa mileage toh maal nahi milega.
+			Upar se sochane ka, kamar ke neeche se bilkul nahi.
 	</section>
 	<aside>
 		IMDB Rating - 7.6/10
