--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
 	<header>
-		<h1><u>Pushpa - The Rise</u></h1>
+		<h1>Pushpa - The Rise</h1>
 		<nav>
 			<a href="#actor" id="nav-actor">Casting</a><br>
 			<a href="#quote" id="nav-quote">Best Dialogues</a>
@@ -18,16 +18,14 @@
 	</header>
 	
 	<summary>
-		<p>Pushpa - The Rise was released on 17 December 2021. The film received generally positive to mixed reviews from critics who praised the performances (particularly of Allu Arjun, Sunil and Fahadh Faasil), action choreography, cinematography, direction, and soundtrack but criticised the lengthy runtime, background score and editing.[17][18][19][20][21] The film was commercially successful, grossing ₹350.3–₹373 crore at the box office. The film emerged as the highest-grossing Indian film in 2021, and ranks among the highest-grossing Telugu films of all time.</p>
+		Pushpa - The Rise was released on 17 December 2021. The film received generally positive to mixed reviews from critics who praised the performances (particularly of Allu Arjun, Sunil and Fahadh Faasil), action choreography, cinematography, direction, and soundtrack but criticised the lengthy runtime, background score and editing.[17][18][19][20][21] The film was commercially successful, grossing ₹350.3–₹373 crore at the box office. The film emerged as the highest-grossing Indian film in 2021, and ranks among the highest-grossing Telugu films of all time.
 	</summary>
 	<section id="actor">
-		<h3>Casting</h3>
 		<p>Allu Arjun played the titular character Pushpa Raj, a red-sanders smuggler, and sported a bearded look for his role in the film.[41] Rashmika Mandanna was cast as the film's lead actress,[42] with an official announcement made on Allu Arjun's birthday (8 April 2019).[43] Mandanna in an online interaction confirmed that she will be learning a new dialect for the film, which is slightly based on the accent of Chittoor.[44][45] Jisshu Sengupta was originally offered to play the antagonist but he refused due to pandemic and time constraint.[46][47] Vijay Sethupathi entered in talks to play the antagonist in October 2019, after working with Sukumar in the director's production venture Uppena (2021),[48][49] and was confirmed to be part of the film in January 2020.[50] However, in July 2020, Sethupathi left the film citing scheduling conflicts.[51] Post Sethupathi's exit, Vikram,[52] Bobby Simha,[53] Madhavan[54] and Arya[55] were reported to play negative roles in the film, but Malayalam actor Fahadh Faasil was announced as the film's antagonist in March 2021, thus marking his debut in Telugu cinema[citation needed].[56] For his role in the film, Fahadh sported a bald look and a rough moustache.[57]
 
 Kannada actor Dhananjaya was reported to play a pivotal role in April 2020.[58] Jagapathi Babu and Prakash Raj were signed to play key roles in the film.[59] In November 2020, Sunil was cast in a supporting role and was present in the film's second schedule along with Harish Uthaman, and Vennela Kishore.[60] Sunil's character was reported to have grey shades in the film.[55] Though it was reported that Anasuya Bharadwaj was playing a crucial role, she later clarified that she wasn't approached for the film.[61] However, Bharadwaj joined the film shooting in April 2021.[62] In July 2021, Sritej confirmed that he was cast in the role of Pushpa Raj's brother.[63] The film had three antagonists, with Sunil and Anasuya, being the antagonists in the first part,[64][65] while Fahadh's character, Bhanwar Singh Shekhawat, the main antagonist, will appear only at the end of the first part and will continue throughout its sequel.[66] Jagadeesh was cast by Sukumar after watching his performances in the films Mallesham (2019) and George Reddy (2019).[67] In an interview, Jagadeesh Prathap Bandari revealed that he has left 15 smaller projects for working in the film.[68] Samantha joined the production in late-November 2021. She has shot for the item song "Oo Antava Oo Oo Antava" alongside Allu Arjun and others.[69][70] On working in the song, she said that "being sexy is next level hard work".</p>
 	</section>
 	<section id="quote">
-		<h3>Best Dialogues</h3>
 			Naon mein baith kar jaal fekna bahot asaan hai … ...
 			Sabki apni ladaai hai.
 			Maal milega toh Pushpa nahi milega, Pushpa mileage toh maal nahi milega.
