--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<header>
 		<h1>Pushpa - The Rise</h1>
 		<nav>
-			<a href="#actor" id="nav-actor">Casting</a><br>
+			<a href="#actor" id="nav-actor">Casting </a>
 			<a href="#quote" id="nav-quote">Best Dialogues</a>
 		</nav>
 	</header>
